github pages release

--- a/index.html
+++ b/index.html
@@ -68,12 +68,13 @@
 				<p>This is a JSON-Schema transpiler. It converts a JSON Schema into types for various strongly typed languages.</p>
 				<p>Features:</p>
 				<ul>
-					<li>Zero external dependencies</li>
 					<li>Supports the following languages:<ul>
 							<li>Typescript</li>
 							<li>Rust</li>
 						</ul>
 					</li>
+					<li>Zero external dependencies</li>
+					<li>Supports merging multiple JSONSchema into one set of types</li>
 					<li>Generates titles for schemas that are missing them</li>
 					<li>Run in browser / node</li>
 				</ul>
