--- a/classes/jsonschematotypes.html
+++ b/classes/jsonschematotypes.html
@@ -120,19 +120,19 @@
 					<a name="constructor" class="tsd-anchor"></a>
 					<h3>constructor</h3>
 					<ul class="tsd-signatures tsd-kind-constructor tsd-parent-kind-class">
-						<li class="tsd-signature tsd-kind-icon">new <wbr>Json<wbr>Schema<wbr>ToTypes<span class="tsd-signature-symbol">(</span>s<span class="tsd-signature-symbol">: </span><a href="../interfaces/schema.html" class="tsd-signature-type">Schema</a><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><a href="jsonschematotypes.html" class="tsd-signature-type">JsonSchemaToTypes</a></li>
+						<li class="tsd-signature tsd-kind-icon">new <wbr>Json<wbr>Schema<wbr>ToTypes<span class="tsd-signature-symbol">(</span>s<span class="tsd-signature-symbol">: </span><a href="../interfaces/schema.html" class="tsd-signature-type">Schema</a><span class="tsd-signature-symbol"> | </span><a href="../interfaces/schema.html" class="tsd-signature-type">Schema</a><span class="tsd-signature-symbol">[]</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><a href="jsonschematotypes.html" class="tsd-signature-type">JsonSchemaToTypes</a></li>
 					</ul>
 					<ul class="tsd-descriptions">
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/b3639d9/src/index.ts#L18">src/index.ts:18</a></li>
+									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/838ab33/src/index.ts#L18">src/index.ts:18</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
 							<ul class="tsd-parameters">
 								<li>
-									<h5>s: <a href="../interfaces/schema.html" class="tsd-signature-type">Schema</a></h5>
+									<h5>s: <a href="../interfaces/schema.html" class="tsd-signature-type">Schema</a><span class="tsd-signature-symbol"> | </span><a href="../interfaces/schema.html" class="tsd-signature-type">Schema</a><span class="tsd-signature-symbol">[]</span></h5>
 								</li>
 							</ul>
 							<h4 class="tsd-returns-title">Returns <a href="jsonschematotypes.html" class="tsd-signature-type">JsonSchemaToTypes</a></h4>
@@ -148,7 +148,7 @@
 					<div class="tsd-signature tsd-kind-icon">mega<wbr>Schema<span class="tsd-signature-symbol">:</span> <a href="../interfaces/schema.html" class="tsd-signature-type">Schema</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/b3639d9/src/index.ts#L18">src/index.ts:18</a></li>
+							<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/838ab33/src/index.ts#L18">src/index.ts:18</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -165,7 +165,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/b3639d9/src/index.ts#L71">src/index.ts:71</a></li>
+									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/838ab33/src/index.ts#L73">src/index.ts:73</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -193,7 +193,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/b3639d9/src/index.ts#L58">src/index.ts:58</a></li>
+									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/838ab33/src/index.ts#L60">src/index.ts:60</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -224,7 +224,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/b3639d9/src/index.ts#L45">src/index.ts:45</a></li>
+									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/838ab33/src/index.ts#L47">src/index.ts:47</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -251,7 +251,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/b3639d9/src/index.ts#L34">src/index.ts:34</a></li>
+									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/838ab33/src/index.ts#L36">src/index.ts:36</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -282,7 +282,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/b3639d9/src/index.ts#L91">src/index.ts:91</a></li>
+									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/838ab33/src/index.ts#L93">src/index.ts:93</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
