github pages release

--- a/classes/jsonschematotypes.html
+++ b/classes/jsonschematotypes.html
@@ -79,6 +79,15 @@
 					</li>
 				</ul>
 			</section>
+			<section class="tsd-panel tsd-kind-class">
+				<h3 class="tsd-before-signature">Indexable</h3>
+				<div class="tsd-signature tsd-kind-icon"><span class="tsd-signature-symbol">[</span>toLang: <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">]: </span><span class="tsd-signature-type">any</span></div>
+				<div class="tsd-comment tsd-typography">
+					<div class="lead">
+						<p>Provides a high-level interface for getting typings given a schema.</p>
+					</div>
+				</div>
+			</section>
 			<section class="tsd-panel-group tsd-index-group">
 				<h2>Index</h2>
 				<section class="tsd-panel tsd-index-panel">
@@ -96,6 +105,10 @@
 							</ul>
 						</section>
 						<section class="tsd-index-section ">
+							<h3>Other Methods</h3>
+							<ul class="tsd-index-list">
+								<li class="tsd-kind-method tsd-parent-kind-class"><a href="jsonschematotypes.html#to" class="tsd-kind-icon">to</a></li>
+							</ul>
 							<h3>Rust Methods</h3>
 							<ul class="tsd-index-list">
 								<li class="tsd-kind-method tsd-parent-kind-class"><a href="jsonschematotypes.html#tors" class="tsd-kind-icon">to<wbr>Rs</a></li>
@@ -126,7 +139,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/fc9077a/src/index.ts#L18">src/index.ts:18</a></li>
+									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/b7e5b0d/src/index.ts#L21">src/index.ts:21</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -148,9 +161,40 @@
 					<div class="tsd-signature tsd-kind-icon">mega<wbr>Schema<span class="tsd-signature-symbol">:</span> <a href="../interfaces/schema.html" class="tsd-signature-type">Schema</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/fc9077a/src/index.ts#L18">src/index.ts:18</a></li>
+							<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/b7e5b0d/src/index.ts#L20">src/index.ts:20</a></li>
 						</ul>
 					</aside>
+				</section>
+			</section>
+			<section class="tsd-panel-group tsd-member-group ">
+				<h2>Other Methods</h2>
+				<section class="tsd-panel tsd-member tsd-kind-method tsd-parent-kind-class">
+					<a name="to" class="tsd-anchor"></a>
+					<h3>to</h3>
+					<ul class="tsd-signatures tsd-kind-method tsd-parent-kind-class">
+						<li class="tsd-signature tsd-kind-icon">to<span class="tsd-signature-symbol">(</span>lang<span class="tsd-signature-symbol">: </span><a href="../globals.html#supportedlanguages" class="tsd-signature-type">SupportedLanguages</a><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">any</span></li>
+					</ul>
+					<ul class="tsd-descriptions">
+						<li class="tsd-description">
+							<aside class="tsd-sources">
+								<ul>
+									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/b7e5b0d/src/index.ts#L33">src/index.ts:33</a></li>
+								</ul>
+							</aside>
+							<div class="tsd-comment tsd-typography">
+								<div class="lead">
+									<p>Generic transpile method.</p>
+								</div>
+							</div>
+							<h4 class="tsd-parameters-title">Parameters</h4>
+							<ul class="tsd-parameters">
+								<li>
+									<h5>lang: <a href="../globals.html#supportedlanguages" class="tsd-signature-type">SupportedLanguages</a></h5>
+								</li>
+							</ul>
+							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">any</span></h4>
+						</li>
+					</ul>
 				</section>
 			</section>
 			<section class="tsd-panel-group tsd-member-group ">
@@ -165,7 +209,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/fc9077a/src/index.ts#L73">src/index.ts:73</a></li>
+									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/b7e5b0d/src/index.ts#L83">src/index.ts:83</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -193,7 +237,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/fc9077a/src/index.ts#L60">src/index.ts:60</a></li>
+									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/b7e5b0d/src/index.ts#L70">src/index.ts:70</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -224,7 +268,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/fc9077a/src/index.ts#L47">src/index.ts:47</a></li>
+									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/b7e5b0d/src/index.ts#L57">src/index.ts:57</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -251,7 +295,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/fc9077a/src/index.ts#L36">src/index.ts:36</a></li>
+									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/b7e5b0d/src/index.ts#L46">src/index.ts:46</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -282,7 +326,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/fc9077a/src/index.ts#L93">src/index.ts:93</a></li>
+									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/b7e5b0d/src/index.ts#L103">src/index.ts:103</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -340,6 +384,9 @@
 							</li>
 							<li class=" tsd-kind-method tsd-parent-kind-class">
 								<a href="jsonschematotypes.html#getdefaulttitleforschema" class="tsd-kind-icon">get<wbr>Default<wbr>Title<wbr>For<wbr>Schema</a>
+							</li>
+							<li class=" tsd-kind-method tsd-parent-kind-class">
+								<a href="jsonschematotypes.html#to" class="tsd-kind-icon">to</a>
 							</li>
 							<li class=" tsd-kind-method tsd-parent-kind-class">
 								<a href="jsonschematotypes.html#tors" class="tsd-kind-icon">to<wbr>Rs</a>
