--- a/globals.html
+++ b/globals.html
@@ -437,6 +437,7 @@
 								<li class="tsd-kind-type-alias tsd-is-external"><a href="globals.html#simplecachekey" class="tsd-kind-icon">Simple<wbr>Cache<wbr>Key</a></li>
 								<li class="tsd-kind-type-alias tsd-is-external"><a href="globals.html#spreadproperty" class="tsd-kind-icon">Spread<wbr>Property</a></li>
 								<li class="tsd-kind-type-alias tsd-is-external"><a href="globals.html#statement" class="tsd-kind-icon">Statement</a></li>
+								<li class="tsd-kind-type-alias"><a href="globals.html#supportedlanguages" class="tsd-kind-icon">Supported<wbr>Languages</a></li>
 								<li class="tsd-kind-type-alias tsd-is-external"><a href="globals.html#tsentityname" class="tsd-kind-icon">TSEntity<wbr>Name</a></li>
 								<li class="tsd-kind-type-alias tsd-is-external"><a href="globals.html#tstype" class="tsd-kind-icon">TSType</a></li>
 								<li class="tsd-kind-type-alias tsd-is-external"><a href="globals.html#tstypeelement" class="tsd-kind-icon">TSType<wbr>Element</a></li>
@@ -1011,8 +1012,8 @@
 					<div class="tsd-signature tsd-kind-icon">Bear<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">any</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/fc9077a/src/integration-tests/results/ts/multi-schema.ts#L2">src/integration-tests/results/ts/multi-schema.ts:2</a></li>
-							<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/fc9077a/src/integration-tests/results/ts/pets.ts#L2">src/integration-tests/results/ts/pets.ts:2</a></li>
+							<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/b7e5b0d/src/integration-tests/results/ts/multi-schema.ts#L2">src/integration-tests/results/ts/multi-schema.ts:2</a></li>
+							<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/b7e5b0d/src/integration-tests/results/ts/pets.ts#L2">src/integration-tests/results/ts/pets.ts:2</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -1393,8 +1394,8 @@
 					<div class="tsd-signature tsd-kind-icon">Man<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">any</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/fc9077a/src/integration-tests/results/ts/multi-schema.ts#L3">src/integration-tests/results/ts/multi-schema.ts:3</a></li>
-							<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/fc9077a/src/integration-tests/results/ts/pets.ts#L3">src/integration-tests/results/ts/pets.ts:3</a></li>
+							<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/b7e5b0d/src/integration-tests/results/ts/multi-schema.ts#L3">src/integration-tests/results/ts/multi-schema.ts:3</a></li>
+							<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/b7e5b0d/src/integration-tests/results/ts/pets.ts#L3">src/integration-tests/results/ts/pets.ts:3</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -1434,7 +1435,7 @@
 					<div class="tsd-signature tsd-kind-icon">Mutation<wbr>Function<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">function</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/fc9077a/src/traverse.ts#L6">src/traverse.ts:6</a></li>
+							<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/b7e5b0d/src/traverse.ts#L6">src/traverse.ts:6</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -1728,8 +1729,8 @@
 					<div class="tsd-signature tsd-kind-icon">Pig<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">any</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/fc9077a/src/integration-tests/results/ts/multi-schema.ts#L4">src/integration-tests/results/ts/multi-schema.ts:4</a></li>
-							<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/fc9077a/src/integration-tests/results/ts/pets.ts#L4">src/integration-tests/results/ts/pets.ts:4</a></li>
+							<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/b7e5b0d/src/integration-tests/results/ts/multi-schema.ts#L4">src/integration-tests/results/ts/multi-schema.ts:4</a></li>
+							<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/b7e5b0d/src/integration-tests/results/ts/pets.ts#L4">src/integration-tests/results/ts/pets.ts:4</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -1922,6 +1923,16 @@
 					<aside class="tsd-sources">
 						<ul>
 							<li>Defined in node_modules/@babel/types/lib/index.d.ts:1478</li>
+						</ul>
+					</aside>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-type-alias">
+					<a name="supportedlanguages" class="tsd-anchor"></a>
+					<h3>Supported<wbr>Languages</h3>
+					<div class="tsd-signature tsd-kind-icon">Supported<wbr>Languages<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">"rust"</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">"rs"</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">"typescript"</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">"ts"</span></div>
+					<aside class="tsd-sources">
+						<ul>
+							<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/b7e5b0d/src/index.ts#L15">src/index.ts:15</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -2290,8 +2301,8 @@
 					<div class="tsd-signature tsd-kind-icon">one<wbr>Of_<wbr><wbr>Bear_<wbr><wbr>Man_<wbr><wbr>Pig_<wbr>sb42<wbr>HoGS<span class="tsd-signature-symbol">:</span> <a href="globals.html#bear" class="tsd-signature-type">Bear</a><span class="tsd-signature-symbol"> | </span><a href="globals.html#man" class="tsd-signature-type">Man</a><span class="tsd-signature-symbol"> | </span><a href="globals.html#pig" class="tsd-signature-type">Pig</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/fc9077a/src/integration-tests/results/ts/multi-schema.ts#L5">src/integration-tests/results/ts/multi-schema.ts:5</a></li>
-							<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/fc9077a/src/integration-tests/results/ts/pets.ts#L5">src/integration-tests/results/ts/pets.ts:5</a></li>
+							<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/b7e5b0d/src/integration-tests/results/ts/multi-schema.ts#L5">src/integration-tests/results/ts/multi-schema.ts:5</a></li>
+							<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/b7e5b0d/src/integration-tests/results/ts/pets.ts#L5">src/integration-tests/results/ts/pets.ts:5</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -2301,8 +2312,8 @@
 					<div class="tsd-signature tsd-kind-icon">pets<span class="tsd-signature-symbol">:</span> <a href="globals.html#oneof_bear_man_pig_sb42hogs" class="tsd-signature-type">oneOf_Bear_Man_Pig_sb42HoGS</a><span class="tsd-signature-symbol">[]</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/fc9077a/src/integration-tests/results/ts/multi-schema.ts#L1">src/integration-tests/results/ts/multi-schema.ts:1</a></li>
-							<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/fc9077a/src/integration-tests/results/ts/pets.ts#L1">src/integration-tests/results/ts/pets.ts:1</a></li>
+							<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/b7e5b0d/src/integration-tests/results/ts/multi-schema.ts#L1">src/integration-tests/results/ts/multi-schema.ts:1</a></li>
+							<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/b7e5b0d/src/integration-tests/results/ts/pets.ts#L1">src/integration-tests/results/ts/pets.ts:1</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -2312,8 +2323,8 @@
 					<div class="tsd-signature tsd-kind-icon">stringxd<wbr>EiCCNL<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/fc9077a/src/integration-tests/results/ts/multi-schema.ts#L6">src/integration-tests/results/ts/multi-schema.ts:6</a></li>
-							<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/fc9077a/src/integration-tests/results/ts/simple.ts#L1">src/integration-tests/results/ts/simple.ts:1</a></li>
+							<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/b7e5b0d/src/integration-tests/results/ts/multi-schema.ts#L6">src/integration-tests/results/ts/multi-schema.ts:6</a></li>
+							<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/b7e5b0d/src/integration-tests/results/ts/simple.ts#L1">src/integration-tests/results/ts/simple.ts:1</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -2882,7 +2893,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/fc9077a/src/utils.ts#L8">src/utils.ts:8</a></li>
+									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/b7e5b0d/src/utils.ts#L8">src/utils.ts:8</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -4046,7 +4057,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/fc9077a/src/ensure-subschema-titles.ts#L27">src/ensure-subschema-titles.ts:27</a></li>
+									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/b7e5b0d/src/ensure-subschema-titles.ts#L27">src/ensure-subschema-titles.ts:27</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -14443,7 +14454,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/fc9077a/src/traverse.ts#L33">src/traverse.ts:33</a></li>
+									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/b7e5b0d/src/traverse.ts#L33">src/traverse.ts:33</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -16630,7 +16641,7 @@
 					<div class="tsd-signature tsd-kind-icon">default<wbr>Options<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">object</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/fc9077a/src/traverse.ts#L18">src/traverse.ts:18</a></li>
+							<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/b7e5b0d/src/traverse.ts#L18">src/traverse.ts:18</a></li>
 						</ul>
 					</aside>
 					<section class="tsd-panel tsd-member tsd-kind-variable tsd-parent-kind-object-literal">
@@ -16639,7 +16650,7 @@
 						<div class="tsd-signature tsd-kind-icon">skip<wbr>First<wbr>Mutation<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">false</span><span class="tsd-signature-symbol"> =&nbsp;false</span></div>
 						<aside class="tsd-sources">
 							<ul>
-								<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/fc9077a/src/traverse.ts#L19">src/traverse.ts:19</a></li>
+								<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/b7e5b0d/src/traverse.ts#L19">src/traverse.ts:19</a></li>
 							</ul>
 						</aside>
 					</section>
