github pages release

--- a/classes/jsonschematotypes.html
+++ b/classes/jsonschematotypes.html
@@ -139,7 +139,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/b7e5b0d/src/index.ts#L21">src/index.ts:21</a></li>
+									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/80cc8a4/src/index.ts#L22">src/index.ts:22</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -161,7 +161,7 @@
 					<div class="tsd-signature tsd-kind-icon">mega<wbr>Schema<span class="tsd-signature-symbol">:</span> <a href="../interfaces/schema.html" class="tsd-signature-type">Schema</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/b7e5b0d/src/index.ts#L20">src/index.ts:20</a></li>
+							<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/80cc8a4/src/index.ts#L22">src/index.ts:22</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -172,13 +172,13 @@
 					<a name="to" class="tsd-anchor"></a>
 					<h3>to</h3>
 					<ul class="tsd-signatures tsd-kind-method tsd-parent-kind-class">
-						<li class="tsd-signature tsd-kind-icon">to<span class="tsd-signature-symbol">(</span>lang<span class="tsd-signature-symbol">: </span><a href="../globals.html#supportedlanguages" class="tsd-signature-type">SupportedLanguages</a><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">any</span></li>
+						<li class="tsd-signature tsd-kind-icon">to<span class="tsd-signature-symbol">(</span>lang<span class="tsd-signature-symbol">: </span><a href="../globals.html#supportedlanguages" class="tsd-signature-type">SupportedLanguages</a><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span></li>
 					</ul>
 					<ul class="tsd-descriptions">
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/b7e5b0d/src/index.ts#L33">src/index.ts:33</a></li>
+									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/80cc8a4/src/index.ts#L34">src/index.ts:34</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -192,7 +192,7 @@
 									<h5>lang: <a href="../globals.html#supportedlanguages" class="tsd-signature-type">SupportedLanguages</a></h5>
 								</li>
 							</ul>
-							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">any</span></h4>
+							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">string</span></h4>
 						</li>
 					</ul>
 				</section>
@@ -209,7 +209,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/b7e5b0d/src/index.ts#L83">src/index.ts:83</a></li>
+									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/80cc8a4/src/index.ts#L84">src/index.ts:84</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -237,7 +237,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/b7e5b0d/src/index.ts#L70">src/index.ts:70</a></li>
+									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/80cc8a4/src/index.ts#L71">src/index.ts:71</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -268,7 +268,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/b7e5b0d/src/index.ts#L57">src/index.ts:57</a></li>
+									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/80cc8a4/src/index.ts#L58">src/index.ts:58</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -295,7 +295,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/b7e5b0d/src/index.ts#L46">src/index.ts:46</a></li>
+									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/80cc8a4/src/index.ts#L47">src/index.ts:47</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -326,7 +326,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/b7e5b0d/src/index.ts#L103">src/index.ts:103</a></li>
+									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/80cc8a4/src/index.ts#L104">src/index.ts:104</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
