--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 							<li>Rust</li>
 						</ul>
 					</li>
-					<li>Zero external dependencies</li>
+					<li>minimal external dependencies</li>
 					<li>Supports merging multiple JSONSchema into one set of types</li>
 					<li>Generates titles for schemas that are missing them</li>
 					<li>Run in browser / node</li>
