--- a/classes/codegen.html
+++ b/classes/codegen.html
@@ -101,6 +101,7 @@
 							<h3>Methods</h3>
 							<ul class="tsd-index-list">
 								<li class="tsd-kind-method tsd-parent-kind-class"><a href="codegen.html#getcodeprefix" class="tsd-kind-icon">get<wbr>Code<wbr>Prefix</a></li>
+								<li class="tsd-kind-method tsd-parent-kind-class"><a href="codegen.html#getsafetitle" class="tsd-kind-icon">get<wbr>Safe<wbr>Title</a></li>
 								<li class="tsd-kind-method tsd-parent-kind-class"><a href="codegen.html#transpile" class="tsd-kind-icon">transpile</a></li>
 							</ul>
 						</section>
@@ -119,7 +120,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/b7e5b0d/src/codegens/codegen-interface.ts#L12">src/codegens/codegen-interface.ts:12</a></li>
+									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/80cc8a4/src/codegens/codegen-interface.ts#L13">src/codegens/codegen-interface.ts:13</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -139,19 +140,42 @@
 					<a name="getcodeprefix" class="tsd-anchor"></a>
 					<h3><span class="tsd-flag ts-flagAbstract">Abstract</span> get<wbr>Code<wbr>Prefix</h3>
 					<ul class="tsd-signatures tsd-kind-method tsd-parent-kind-class">
-						<li class="tsd-signature tsd-kind-icon">get<wbr>Code<wbr>Prefix<span class="tsd-signature-symbol">(</span>schema<span class="tsd-signature-symbol">: </span><a href="../interfaces/schema.html" class="tsd-signature-type">Schema</a><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span></li>
+						<li class="tsd-signature tsd-kind-icon">get<wbr>Code<wbr>Prefix<span class="tsd-signature-symbol">(</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span></li>
 					</ul>
 					<ul class="tsd-descriptions">
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/b7e5b0d/src/codegens/codegen-interface.ts#L33">src/codegens/codegen-interface.ts:33</a></li>
+									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/80cc8a4/src/codegens/codegen-interface.ts#L43">src/codegens/codegen-interface.ts:43</a></li>
 								</ul>
 							</aside>
+							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">string</span></h4>
+						</li>
+					</ul>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-method tsd-parent-kind-class">
+					<a name="getsafetitle" class="tsd-anchor"></a>
+					<h3>get<wbr>Safe<wbr>Title</h3>
+					<ul class="tsd-signatures tsd-kind-method tsd-parent-kind-class">
+						<li class="tsd-signature tsd-kind-icon">get<wbr>Safe<wbr>Title<span class="tsd-signature-symbol">(</span>title<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span></li>
+					</ul>
+					<ul class="tsd-descriptions">
+						<li class="tsd-description">
+							<aside class="tsd-sources">
+								<ul>
+									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/80cc8a4/src/codegens/codegen-interface.ts#L39">src/codegens/codegen-interface.ts:39</a></li>
+								</ul>
+							</aside>
+							<div class="tsd-comment tsd-typography">
+								<div class="lead">
+									<p>Generic title transform that gives a title without special characters or spaces. It may be overriden if
+									this implementation does not suffice.</p>
+								</div>
+							</div>
 							<h4 class="tsd-parameters-title">Parameters</h4>
 							<ul class="tsd-parameters">
 								<li>
-									<h5>schema: <a href="../interfaces/schema.html" class="tsd-signature-type">Schema</a></h5>
+									<h5>title: <span class="tsd-signature-type">string</span></h5>
 								</li>
 							</ul>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">string</span></h4>
@@ -168,7 +192,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/b7e5b0d/src/codegens/codegen-interface.ts#L18">src/codegens/codegen-interface.ts:18</a></li>
+									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/80cc8a4/src/codegens/codegen-interface.ts#L19">src/codegens/codegen-interface.ts:19</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -202,6 +226,9 @@
 							</li>
 							<li class=" tsd-kind-method tsd-parent-kind-class">
 								<a href="codegen.html#getcodeprefix" class="tsd-kind-icon">get<wbr>Code<wbr>Prefix</a>
+							</li>
+							<li class=" tsd-kind-method tsd-parent-kind-class">
+								<a href="codegen.html#getsafetitle" class="tsd-kind-icon">get<wbr>Safe<wbr>Title</a>
 							</li>
 							<li class=" tsd-kind-method tsd-parent-kind-class">
 								<a href="codegen.html#transpile" class="tsd-kind-icon">transpile</a>
