--- a/classes/rust.html
+++ b/classes/rust.html
@@ -91,6 +91,7 @@
 							<h3>Methods</h3>
 							<ul class="tsd-index-list">
 								<li class="tsd-kind-method tsd-parent-kind-class tsd-is-overwrite"><a href="rust.html#getcodeprefix" class="tsd-kind-icon">get<wbr>Code<wbr>Prefix</a></li>
+								<li class="tsd-kind-method tsd-parent-kind-class tsd-is-inherited"><a href="rust.html#getsafetitle" class="tsd-kind-icon">get<wbr>Safe<wbr>Title</a></li>
 								<li class="tsd-kind-method tsd-parent-kind-class tsd-is-inherited"><a href="rust.html#transpile" class="tsd-kind-icon">transpile</a></li>
 							</ul>
 						</section>
@@ -110,7 +111,7 @@
 							<aside class="tsd-sources">
 								<p>Inherited from <a href="codegen.html">CodeGen</a>.<a href="codegen.html#constructor">constructor</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/b7e5b0d/src/codegens/codegen-interface.ts#L12">src/codegens/codegen-interface.ts:12</a></li>
+									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/80cc8a4/src/codegens/codegen-interface.ts#L13">src/codegens/codegen-interface.ts:13</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -137,9 +138,39 @@
 							<aside class="tsd-sources">
 								<p>Overrides <a href="codegen.html">CodeGen</a>.<a href="codegen.html#getcodeprefix">getCodePrefix</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/b7e5b0d/src/codegens/rust.ts#L7">src/codegens/rust.ts:7</a></li>
+									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/80cc8a4/src/codegens/rust.ts#L7">src/codegens/rust.ts:7</a></li>
 								</ul>
 							</aside>
+							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">string</span></h4>
+						</li>
+					</ul>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-method tsd-parent-kind-class tsd-is-inherited">
+					<a name="getsafetitle" class="tsd-anchor"></a>
+					<h3>get<wbr>Safe<wbr>Title</h3>
+					<ul class="tsd-signatures tsd-kind-method tsd-parent-kind-class tsd-is-inherited">
+						<li class="tsd-signature tsd-kind-icon">get<wbr>Safe<wbr>Title<span class="tsd-signature-symbol">(</span>title<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span></li>
+					</ul>
+					<ul class="tsd-descriptions">
+						<li class="tsd-description">
+							<aside class="tsd-sources">
+								<p>Inherited from <a href="codegen.html">CodeGen</a>.<a href="codegen.html#getsafetitle">getSafeTitle</a></p>
+								<ul>
+									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/80cc8a4/src/codegens/codegen-interface.ts#L39">src/codegens/codegen-interface.ts:39</a></li>
+								</ul>
+							</aside>
+							<div class="tsd-comment tsd-typography">
+								<div class="lead">
+									<p>Generic title transform that gives a title without special characters or spaces. It may be overriden if
+									this implementation does not suffice.</p>
+								</div>
+							</div>
+							<h4 class="tsd-parameters-title">Parameters</h4>
+							<ul class="tsd-parameters">
+								<li>
+									<h5>title: <span class="tsd-signature-type">string</span></h5>
+								</li>
+							</ul>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">string</span></h4>
 						</li>
 					</ul>
@@ -155,7 +186,7 @@
 							<aside class="tsd-sources">
 								<p>Inherited from <a href="codegen.html">CodeGen</a>.<a href="codegen.html#transpile">transpile</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/b7e5b0d/src/codegens/codegen-interface.ts#L18">src/codegens/codegen-interface.ts:18</a></li>
+									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/80cc8a4/src/codegens/codegen-interface.ts#L19">src/codegens/codegen-interface.ts:19</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -189,6 +220,9 @@
 							</li>
 							<li class=" tsd-kind-method tsd-parent-kind-class tsd-is-overwrite">
 								<a href="rust.html#getcodeprefix" class="tsd-kind-icon">get<wbr>Code<wbr>Prefix</a>
+							</li>
+							<li class=" tsd-kind-method tsd-parent-kind-class tsd-is-inherited">
+								<a href="rust.html#getsafetitle" class="tsd-kind-icon">get<wbr>Safe<wbr>Title</a>
 							</li>
 							<li class=" tsd-kind-method tsd-parent-kind-class tsd-is-inherited">
 								<a href="rust.html#transpile" class="tsd-kind-icon">transpile</a>
