github pages release

--- a/index.html
+++ b/index.html
@@ -141,6 +141,9 @@ export type bar = string;"
 					<li class=" tsd-kind-function">
 						<a href="globals.html#ensuresubschematitles" class="tsd-kind-icon">ensure<wbr>Subschema<wbr>Titles</a>
 					</li>
+					<li class=" tsd-kind-function">
+						<a href="globals.html#getdefaulttitleforschema" class="tsd-kind-icon">get<wbr>Default<wbr>Title<wbr>For<wbr>Schema</a>
+					</li>
 					<li class=" tsd-kind-function tsd-has-type-parameter">
 						<a href="globals.html#traverse" class="tsd-kind-icon">traverse</a>
 					</li>
