github pages release

--- a/classes/typescript.html
+++ b/classes/typescript.html
@@ -87,10 +87,10 @@
 								<li class="tsd-kind-constructor tsd-parent-kind-class tsd-is-inherited"><a href="typescript.html#constructor" class="tsd-kind-icon">constructor</a></li>
 							</ul>
 						</section>
-						<section class="tsd-index-section ">
+						<section class="tsd-index-section tsd-is-inherited">
 							<h3>Methods</h3>
 							<ul class="tsd-index-list">
-								<li class="tsd-kind-method tsd-parent-kind-class tsd-is-overwrite"><a href="typescript.html#getcodeprefix" class="tsd-kind-icon">get<wbr>Code<wbr>Prefix</a></li>
+								<li class="tsd-kind-method tsd-parent-kind-class tsd-is-inherited"><a href="typescript.html#getcodeprefix" class="tsd-kind-icon">get<wbr>Code<wbr>Prefix</a></li>
 								<li class="tsd-kind-method tsd-parent-kind-class tsd-is-inherited"><a href="typescript.html#getsafetitle" class="tsd-kind-icon">get<wbr>Safe<wbr>Title</a></li>
 								<li class="tsd-kind-method tsd-parent-kind-class tsd-is-inherited"><a href="typescript.html#transpile" class="tsd-kind-icon">transpile</a></li>
 							</ul>
@@ -111,7 +111,7 @@
 							<aside class="tsd-sources">
 								<p>Inherited from <a href="codegen.html">CodeGen</a>.<a href="codegen.html#constructor">constructor</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/4a35910/src/codegens/codegen.ts#L14">src/codegens/codegen.ts:14</a></li>
+									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/6066fbf/src/codegens/codegen.ts#L14">src/codegens/codegen.ts:14</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -125,20 +125,20 @@
 					</ul>
 				</section>
 			</section>
-			<section class="tsd-panel-group tsd-member-group ">
+			<section class="tsd-panel-group tsd-member-group tsd-is-inherited">
 				<h2>Methods</h2>
-				<section class="tsd-panel tsd-member tsd-kind-method tsd-parent-kind-class tsd-is-overwrite">
+				<section class="tsd-panel tsd-member tsd-kind-method tsd-parent-kind-class tsd-is-inherited">
 					<a name="getcodeprefix" class="tsd-anchor"></a>
 					<h3>get<wbr>Code<wbr>Prefix</h3>
-					<ul class="tsd-signatures tsd-kind-method tsd-parent-kind-class tsd-is-overwrite">
+					<ul class="tsd-signatures tsd-kind-method tsd-parent-kind-class tsd-is-inherited">
 						<li class="tsd-signature tsd-kind-icon">get<wbr>Code<wbr>Prefix<span class="tsd-signature-symbol">(</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span></li>
 					</ul>
 					<ul class="tsd-descriptions">
 						<li class="tsd-description">
 							<aside class="tsd-sources">
-								<p>Overrides <a href="codegen.html">CodeGen</a>.<a href="codegen.html#getcodeprefix">getCodePrefix</a></p>
+								<p>Inherited from <a href="codegen.html">CodeGen</a>.<a href="codegen.html#getcodeprefix">getCodePrefix</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/4a35910/src/codegens/typescript.ts#L6">src/codegens/typescript.ts:6</a></li>
+									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/6066fbf/src/codegens/codegen.ts#L44">src/codegens/codegen.ts:44</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">string</span></h4>
@@ -156,7 +156,7 @@
 							<aside class="tsd-sources">
 								<p>Inherited from <a href="codegen.html">CodeGen</a>.<a href="codegen.html#getsafetitle">getSafeTitle</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/4a35910/src/codegens/codegen.ts#L40">src/codegens/codegen.ts:40</a></li>
+									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/6066fbf/src/codegens/codegen.ts#L40">src/codegens/codegen.ts:40</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -186,7 +186,7 @@
 							<aside class="tsd-sources">
 								<p>Inherited from <a href="codegen.html">CodeGen</a>.<a href="codegen.html#transpile">transpile</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/4a35910/src/codegens/codegen.ts#L20">src/codegens/codegen.ts:20</a></li>
+									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/6066fbf/src/codegens/codegen.ts#L20">src/codegens/codegen.ts:20</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -218,7 +218,7 @@
 							<li class=" tsd-kind-constructor tsd-parent-kind-class tsd-is-inherited">
 								<a href="typescript.html#constructor" class="tsd-kind-icon">constructor</a>
 							</li>
-							<li class=" tsd-kind-method tsd-parent-kind-class tsd-is-overwrite">
+							<li class=" tsd-kind-method tsd-parent-kind-class tsd-is-inherited">
 								<a href="typescript.html#getcodeprefix" class="tsd-kind-icon">get<wbr>Code<wbr>Prefix</a>
 							</li>
 							<li class=" tsd-kind-method tsd-parent-kind-class tsd-is-inherited">
