--- a/classes/codegen.html
+++ b/classes/codegen.html
@@ -83,6 +83,9 @@
 							<li>
 								<a href="rust.html" class="tsd-signature-type">Rust</a>
 							</li>
+							<li>
+								<a href="golang.html" class="tsd-signature-type">Golang</a>
+							</li>
 						</ul>
 					</li>
 				</ul>
@@ -120,7 +123,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/4a35910/src/codegens/codegen.ts#L14">src/codegens/codegen.ts:14</a></li>
+									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/6066fbf/src/codegens/codegen.ts#L14">src/codegens/codegen.ts:14</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -138,7 +141,7 @@
 				<h2>Methods</h2>
 				<section class="tsd-panel tsd-member tsd-kind-method tsd-parent-kind-class">
 					<a name="getcodeprefix" class="tsd-anchor"></a>
-					<h3><span class="tsd-flag ts-flagAbstract">Abstract</span> get<wbr>Code<wbr>Prefix</h3>
+					<h3>get<wbr>Code<wbr>Prefix</h3>
 					<ul class="tsd-signatures tsd-kind-method tsd-parent-kind-class">
 						<li class="tsd-signature tsd-kind-icon">get<wbr>Code<wbr>Prefix<span class="tsd-signature-symbol">(</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span></li>
 					</ul>
@@ -146,7 +149,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/4a35910/src/codegens/codegen.ts#L44">src/codegens/codegen.ts:44</a></li>
+									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/6066fbf/src/codegens/codegen.ts#L44">src/codegens/codegen.ts:44</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">string</span></h4>
@@ -163,7 +166,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/4a35910/src/codegens/codegen.ts#L40">src/codegens/codegen.ts:40</a></li>
+									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/6066fbf/src/codegens/codegen.ts#L40">src/codegens/codegen.ts:40</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -192,7 +195,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/4a35910/src/codegens/codegen.ts#L20">src/codegens/codegen.ts:20</a></li>
+									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/6066fbf/src/codegens/codegen.ts#L20">src/codegens/codegen.ts:20</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
