--- a/classes/golang.html
+++ b/classes/golang.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Rust | @open-rpc/schema-utils-js</title>
+	<title>Golang | @open-rpc/schema-utils-js</title>
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="../assets/css/main.css">
@@ -54,10 +54,10 @@
 					<a href="../globals.html">Globals</a>
 				</li>
 				<li>
-					<a href="rust.html">Rust</a>
+					<a href="golang.html">Golang</a>
 				</li>
 			</ul>
-			<h1>Class Rust</h1>
+			<h1>Class Golang</h1>
 		</div>
 	</div>
 </header>
@@ -71,7 +71,7 @@
 						<a href="codegen.html" class="tsd-signature-type">CodeGen</a>
 						<ul class="tsd-hierarchy">
 							<li>
-								<span class="target">Rust</span>
+								<span class="target">Golang</span>
 							</li>
 						</ul>
 					</li>
@@ -84,15 +84,15 @@
 						<section class="tsd-index-section tsd-is-inherited">
 							<h3>Constructors</h3>
 							<ul class="tsd-index-list">
-								<li class="tsd-kind-constructor tsd-parent-kind-class tsd-is-inherited"><a href="rust.html#constructor" class="tsd-kind-icon">constructor</a></li>
+								<li class="tsd-kind-constructor tsd-parent-kind-class tsd-is-inherited"><a href="golang.html#constructor" class="tsd-kind-icon">constructor</a></li>
 							</ul>
 						</section>
-						<section class="tsd-index-section ">
+						<section class="tsd-index-section tsd-is-inherited">
 							<h3>Methods</h3>
 							<ul class="tsd-index-list">
-								<li class="tsd-kind-method tsd-parent-kind-class tsd-is-overwrite"><a href="rust.html#getcodeprefix" class="tsd-kind-icon">get<wbr>Code<wbr>Prefix</a></li>
-								<li class="tsd-kind-method tsd-parent-kind-class tsd-is-inherited"><a href="rust.html#getsafetitle" class="tsd-kind-icon">get<wbr>Safe<wbr>Title</a></li>
-								<li class="tsd-kind-method tsd-parent-kind-class tsd-is-inherited"><a href="rust.html#transpile" class="tsd-kind-icon">transpile</a></li>
+								<li class="tsd-kind-method tsd-parent-kind-class tsd-is-inherited"><a href="golang.html#getcodeprefix" class="tsd-kind-icon">get<wbr>Code<wbr>Prefix</a></li>
+								<li class="tsd-kind-method tsd-parent-kind-class tsd-is-inherited"><a href="golang.html#getsafetitle" class="tsd-kind-icon">get<wbr>Safe<wbr>Title</a></li>
+								<li class="tsd-kind-method tsd-parent-kind-class tsd-is-inherited"><a href="golang.html#transpile" class="tsd-kind-icon">transpile</a></li>
 							</ul>
 						</section>
 					</div>
@@ -104,7 +104,7 @@
 					<a name="constructor" class="tsd-anchor"></a>
 					<h3>constructor</h3>
 					<ul class="tsd-signatures tsd-kind-constructor tsd-parent-kind-class tsd-is-inherited">
-						<li class="tsd-signature tsd-kind-icon">new <wbr>Rust<span class="tsd-signature-symbol">(</span>schema<span class="tsd-signature-symbol">: </span><a href="../interfaces/schema.html" class="tsd-signature-type">Schema</a><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><a href="rust.html" class="tsd-signature-type">Rust</a></li>
+						<li class="tsd-signature tsd-kind-icon">new <wbr>Golang<span class="tsd-signature-symbol">(</span>schema<span class="tsd-signature-symbol">: </span><a href="../interfaces/schema.html" class="tsd-signature-type">Schema</a><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><a href="golang.html" class="tsd-signature-type">Golang</a></li>
 					</ul>
 					<ul class="tsd-descriptions">
 						<li class="tsd-description">
@@ -120,25 +120,25 @@
 									<h5>schema: <a href="../interfaces/schema.html" class="tsd-signature-type">Schema</a></h5>
 								</li>
 							</ul>
-							<h4 class="tsd-returns-title">Returns <a href="rust.html" class="tsd-signature-type">Rust</a></h4>
+							<h4 class="tsd-returns-title">Returns <a href="golang.html" class="tsd-signature-type">Golang</a></h4>
 						</li>
 					</ul>
 				</section>
 			</section>
-			<section class="tsd-panel-group tsd-member-group ">
+			<section class="tsd-panel-group tsd-member-group tsd-is-inherited">
 				<h2>Methods</h2>
-				<section class="tsd-panel tsd-member tsd-kind-method tsd-parent-kind-class tsd-is-overwrite">
+				<section class="tsd-panel tsd-member tsd-kind-method tsd-parent-kind-class tsd-is-inherited">
 					<a name="getcodeprefix" class="tsd-anchor"></a>
 					<h3>get<wbr>Code<wbr>Prefix</h3>
-					<ul class="tsd-signatures tsd-kind-method tsd-parent-kind-class tsd-is-overwrite">
+					<ul class="tsd-signatures tsd-kind-method tsd-parent-kind-class tsd-is-inherited">
 						<li class="tsd-signature tsd-kind-icon">get<wbr>Code<wbr>Prefix<span class="tsd-signature-symbol">(</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span></li>
 					</ul>
 					<ul class="tsd-descriptions">
 						<li class="tsd-description">
 							<aside class="tsd-sources">
-								<p>Overrides <a href="codegen.html">CodeGen</a>.<a href="codegen.html#getcodeprefix">getCodePrefix</a></p>
+								<p>Inherited from <a href="codegen.html">CodeGen</a>.<a href="codegen.html#getcodeprefix">getCodePrefix</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/6066fbf/src/codegens/rust.ts#L7">src/codegens/rust.ts:7</a></li>
+									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/6066fbf/src/codegens/codegen.ts#L44">src/codegens/codegen.ts:44</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">string</span></h4>
@@ -213,19 +213,19 @@
 				</ul>
 				<ul class="current">
 					<li class="current tsd-kind-class">
-						<a href="rust.html" class="tsd-kind-icon">Rust</a>
+						<a href="golang.html" class="tsd-kind-icon">Golang</a>
 						<ul>
 							<li class=" tsd-kind-constructor tsd-parent-kind-class tsd-is-inherited">
-								<a href="rust.html#constructor" class="tsd-kind-icon">constructor</a>
-							</li>
-							<li class=" tsd-kind-method tsd-parent-kind-class tsd-is-overwrite">
-								<a href="rust.html#getcodeprefix" class="tsd-kind-icon">get<wbr>Code<wbr>Prefix</a>
+								<a href="golang.html#constructor" class="tsd-kind-icon">constructor</a>
 							</li>
 							<li class=" tsd-kind-method tsd-parent-kind-class tsd-is-inherited">
-								<a href="rust.html#getsafetitle" class="tsd-kind-icon">get<wbr>Safe<wbr>Title</a>
+								<a href="golang.html#getcodeprefix" class="tsd-kind-icon">get<wbr>Code<wbr>Prefix</a>
 							</li>
 							<li class=" tsd-kind-method tsd-parent-kind-class tsd-is-inherited">
-								<a href="rust.html#transpile" class="tsd-kind-icon">transpile</a>
+								<a href="golang.html#getsafetitle" class="tsd-kind-icon">get<wbr>Safe<wbr>Title</a>
+							</li>
+							<li class=" tsd-kind-method tsd-parent-kind-class tsd-is-inherited">
+								<a href="golang.html#transpile" class="tsd-kind-icon">transpile</a>
 							</li>
 						</ul>
 					</li>
