--- a/classes/jsonschematotypes.html
+++ b/classes/jsonschematotypes.html
@@ -111,6 +111,8 @@
 							</ul>
 							<h3>Rust Methods</h3>
 							<ul class="tsd-index-list">
+								<li class="tsd-kind-method tsd-parent-kind-class"><a href="jsonschematotypes.html#togo" class="tsd-kind-icon">to<wbr>Go</a></li>
+								<li class="tsd-kind-method tsd-parent-kind-class"><a href="jsonschematotypes.html#togolang" class="tsd-kind-icon">to<wbr>Golang</a></li>
 								<li class="tsd-kind-method tsd-parent-kind-class"><a href="jsonschematotypes.html#tors" class="tsd-kind-icon">to<wbr>Rs</a></li>
 								<li class="tsd-kind-method tsd-parent-kind-class"><a href="jsonschematotypes.html#torust" class="tsd-kind-icon">to<wbr>Rust</a></li>
 							</ul>
@@ -135,7 +137,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/4a35910/src/index.ts#L19">src/index.ts:19</a></li>
+									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/6066fbf/src/index.ts#L20">src/index.ts:20</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -157,7 +159,7 @@
 					<div class="tsd-signature tsd-kind-icon">mega<wbr>Schema<span class="tsd-signature-symbol">:</span> <a href="../interfaces/schema.html" class="tsd-signature-type">Schema</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/4a35910/src/index.ts#L19">src/index.ts:19</a></li>
+							<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/6066fbf/src/index.ts#L20">src/index.ts:20</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -174,7 +176,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/4a35910/src/index.ts#L31">src/index.ts:31</a></li>
+									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/6066fbf/src/index.ts#L32">src/index.ts:32</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -196,6 +198,62 @@
 			<section class="tsd-panel-group tsd-member-group ">
 				<h2>Rust Methods</h2>
 				<section class="tsd-panel tsd-member tsd-kind-method tsd-parent-kind-class">
+					<a name="togo" class="tsd-anchor"></a>
+					<h3>to<wbr>Go</h3>
+					<ul class="tsd-signatures tsd-kind-method tsd-parent-kind-class">
+						<li class="tsd-signature tsd-kind-icon">to<wbr>Go<span class="tsd-signature-symbol">(</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span></li>
+					</ul>
+					<ul class="tsd-descriptions">
+						<li class="tsd-description">
+							<aside class="tsd-sources">
+								<ul>
+									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/6066fbf/src/index.ts#L108">src/index.ts:108</a></li>
+								</ul>
+							</aside>
+							<div class="tsd-comment tsd-typography">
+								<div class="lead">
+									<p>Returns the types in Rust</p>
+								</div>
+								<dl class="tsd-comment-tags">
+									<dt>category</dt>
+									<dd><p>TargetCodeGenerator</p>
+									</dd>
+								</dl>
+							</div>
+							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">string</span></h4>
+							<p>The types present in the megaSchema, seperated by newlines.</p>
+						</li>
+					</ul>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-method tsd-parent-kind-class">
+					<a name="togolang" class="tsd-anchor"></a>
+					<h3>to<wbr>Golang</h3>
+					<ul class="tsd-signatures tsd-kind-method tsd-parent-kind-class">
+						<li class="tsd-signature tsd-kind-icon">to<wbr>Golang<span class="tsd-signature-symbol">(</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span></li>
+					</ul>
+					<ul class="tsd-descriptions">
+						<li class="tsd-description">
+							<aside class="tsd-sources">
+								<ul>
+									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/6066fbf/src/index.ts#L95">src/index.ts:95</a></li>
+								</ul>
+							</aside>
+							<div class="tsd-comment tsd-typography">
+								<div class="lead">
+									<p>Returns the types in Rust</p>
+								</div>
+								<dl class="tsd-comment-tags">
+									<dt>category</dt>
+									<dd><p>TargetCodeGenerator</p>
+									</dd>
+								</dl>
+							</div>
+							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">string</span></h4>
+							<p>The types present in the megaSchema, seperated by newlines.</p>
+						</li>
+					</ul>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-method tsd-parent-kind-class">
 					<a name="tors" class="tsd-anchor"></a>
 					<h3>to<wbr>Rs</h3>
 					<ul class="tsd-signatures tsd-kind-method tsd-parent-kind-class">
@@ -205,7 +263,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/4a35910/src/index.ts#L81">src/index.ts:81</a></li>
+									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/6066fbf/src/index.ts#L82">src/index.ts:82</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -233,7 +291,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/4a35910/src/index.ts#L68">src/index.ts:68</a></li>
+									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/6066fbf/src/index.ts#L69">src/index.ts:69</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -264,7 +322,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/4a35910/src/index.ts#L55">src/index.ts:55</a></li>
+									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/6066fbf/src/index.ts#L56">src/index.ts:56</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -291,7 +349,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/4a35910/src/index.ts#L44">src/index.ts:44</a></li>
+									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/6066fbf/src/index.ts#L45">src/index.ts:45</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -334,6 +392,12 @@
 							</li>
 							<li class=" tsd-kind-method tsd-parent-kind-class">
 								<a href="jsonschematotypes.html#to" class="tsd-kind-icon">to</a>
+							</li>
+							<li class=" tsd-kind-method tsd-parent-kind-class">
+								<a href="jsonschematotypes.html#togo" class="tsd-kind-icon">to<wbr>Go</a>
+							</li>
+							<li class=" tsd-kind-method tsd-parent-kind-class">
+								<a href="jsonschematotypes.html#togolang" class="tsd-kind-icon">to<wbr>Golang</a>
 							</li>
 							<li class=" tsd-kind-method tsd-parent-kind-class">
 								<a href="jsonschematotypes.html#tors" class="tsd-kind-icon">to<wbr>Rs</a>
