--- a/interfaces/typeintermediaterepresentation.html
+++ b/interfaces/typeintermediaterepresentation.html
@@ -96,7 +96,7 @@
 					<div class="tsd-signature tsd-kind-icon">documentation<wbr>Comment<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">undefined</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/4a35910/src/codegens/codegen.ts#L8">src/codegens/codegen.ts:8</a></li>
+							<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/6066fbf/src/codegens/codegen.ts#L8">src/codegens/codegen.ts:8</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -106,17 +106,17 @@
 					<div class="tsd-signature tsd-kind-icon">macros<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">undefined</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/4a35910/src/codegens/codegen.ts#L5">src/codegens/codegen.ts:5</a></li>
+							<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/6066fbf/src/codegens/codegen.ts#L5">src/codegens/codegen.ts:5</a></li>
 						</ul>
 					</aside>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface">
 					<a name="prefix" class="tsd-anchor"></a>
-					<h3>prefix</h3>
-					<div class="tsd-signature tsd-kind-icon">prefix<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
+					<h3><span class="tsd-flag ts-flagOptional">Optional</span> prefix</h3>
+					<div class="tsd-signature tsd-kind-icon">prefix<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">undefined</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/4a35910/src/codegens/codegen.ts#L6">src/codegens/codegen.ts:6</a></li>
+							<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/6066fbf/src/codegens/codegen.ts#L6">src/codegens/codegen.ts:6</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -126,7 +126,7 @@
 					<div class="tsd-signature tsd-kind-icon">typing<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/4a35910/src/codegens/codegen.ts#L7">src/codegens/codegen.ts:7</a></li>
+							<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/6066fbf/src/codegens/codegen.ts#L7">src/codegens/codegen.ts:7</a></li>
 						</ul>
 					</aside>
 				</section>
