github pages release

--- a/interfaces/objectofbooleanqg3xfxa5u126ekts.html
+++ b/interfaces/objectofbooleanqg3xfxa5u126ekts.html
@@ -89,11 +89,11 @@
 				<h2>Properties</h2>
 				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface">
 					<a name="ripslip" class="tsd-anchor"></a>
-					<h3>ripslip</h3>
+					<h3><span class="tsd-flag ts-flagOptional">Optional</span> ripslip</h3>
 					<div class="tsd-signature tsd-kind-icon">ripslip<span class="tsd-signature-symbol">:</span> <a href="../globals.html#booleanqg3xfxa5" class="tsd-signature-type">BooleanQg3XFxa5</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/6066fbf/src/integration-tests/results/ts/duplicate-names.ts#L4">src/integration-tests/results/ts/duplicate-names.ts:4</a></li>
+							<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/ed88352/src/integration-tests/results/ts/duplicate-names.ts#L4">src/integration-tests/results/ts/duplicate-names.ts:4</a></li>
 						</ul>
 					</aside>
 				</section>
