github pages release

--- a/interfaces/objectofbooleanqg3xfxa5u126ekts.html
+++ b/interfaces/objectofbooleanqg3xfxa5u126ekts.html
@@ -72,6 +72,10 @@
 					</li>
 				</ul>
 			</section>
+			<section class="tsd-panel tsd-kind-interface">
+				<h3 class="tsd-before-signature">Indexable</h3>
+				<div class="tsd-signature tsd-kind-icon"><span class="tsd-signature-symbol">[</span>k: <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">]: </span><span class="tsd-signature-type">any</span></div>
+			</section>
 			<section class="tsd-panel-group tsd-index-group">
 				<h2>Index</h2>
 				<section class="tsd-panel tsd-index-panel">
@@ -93,7 +97,7 @@
 					<div class="tsd-signature tsd-kind-icon">ripslip<span class="tsd-signature-symbol">:</span> <a href="../globals.html#booleanqg3xfxa5" class="tsd-signature-type">BooleanQg3XFxa5</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/ed88352/src/integration-tests/results/ts/duplicate-names.ts#L4">src/integration-tests/results/ts/duplicate-names.ts:4</a></li>
+							<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/7ee9e3f/src/integration-tests/results/ts/duplicate-names.ts#L4">src/integration-tests/results/ts/duplicate-names.ts:4</a></li>
 						</ul>
 					</aside>
 				</section>
