github pages release

--- a/classes/codegen.html
+++ b/classes/codegen.html
@@ -86,6 +86,9 @@
 							<li>
 								<a href="golang.html" class="tsd-signature-type">Golang</a>
 							</li>
+							<li>
+								<a href="python.html" class="tsd-signature-type">Python</a>
+							</li>
 						</ul>
 					</li>
 				</ul>
@@ -123,7 +126,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/d8fc0f1/src/codegens/codegen.ts#L14">src/codegens/codegen.ts:14</a></li>
+									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/3cf1d66/src/codegens/codegen.ts#L14">src/codegens/codegen.ts:14</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -149,7 +152,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/d8fc0f1/src/codegens/codegen.ts#L44">src/codegens/codegen.ts:44</a></li>
+									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/3cf1d66/src/codegens/codegen.ts#L44">src/codegens/codegen.ts:44</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">string</span></h4>
@@ -166,7 +169,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/d8fc0f1/src/codegens/codegen.ts#L40">src/codegens/codegen.ts:40</a></li>
+									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/3cf1d66/src/codegens/codegen.ts#L40">src/codegens/codegen.ts:40</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -195,7 +198,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/d8fc0f1/src/codegens/codegen.ts#L20">src/codegens/codegen.ts:20</a></li>
+									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/3cf1d66/src/codegens/codegen.ts#L20">src/codegens/codegen.ts:20</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
