--- a/classes/python.html
+++ b/classes/python.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Typescript | @open-rpc/schema-utils-js</title>
+	<title>Python | @open-rpc/schema-utils-js</title>
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="../assets/css/main.css">
@@ -54,10 +54,10 @@
 					<a href="../globals.html">Globals</a>
 				</li>
 				<li>
-					<a href="typescript.html">Typescript</a>
+					<a href="python.html">Python</a>
 				</li>
 			</ul>
-			<h1>Class Typescript</h1>
+			<h1>Class Python</h1>
 		</div>
 	</div>
 </header>
@@ -71,7 +71,7 @@
 						<a href="codegen.html" class="tsd-signature-type">CodeGen</a>
 						<ul class="tsd-hierarchy">
 							<li>
-								<span class="target">Typescript</span>
+								<span class="target">Python</span>
 							</li>
 						</ul>
 					</li>
@@ -84,15 +84,15 @@
 						<section class="tsd-index-section tsd-is-inherited">
 							<h3>Constructors</h3>
 							<ul class="tsd-index-list">
-								<li class="tsd-kind-constructor tsd-parent-kind-class tsd-is-inherited"><a href="typescript.html#constructor" class="tsd-kind-icon">constructor</a></li>
+								<li class="tsd-kind-constructor tsd-parent-kind-class tsd-is-inherited"><a href="python.html#constructor" class="tsd-kind-icon">constructor</a></li>
 							</ul>
 						</section>
 						<section class="tsd-index-section tsd-is-inherited">
 							<h3>Methods</h3>
 							<ul class="tsd-index-list">
-								<li class="tsd-kind-method tsd-parent-kind-class tsd-is-inherited"><a href="typescript.html#getcodeprefix" class="tsd-kind-icon">get<wbr>Code<wbr>Prefix</a></li>
-								<li class="tsd-kind-method tsd-parent-kind-class tsd-is-inherited"><a href="typescript.html#getsafetitle" class="tsd-kind-icon">get<wbr>Safe<wbr>Title</a></li>
-								<li class="tsd-kind-method tsd-parent-kind-class tsd-is-inherited"><a href="typescript.html#transpile" class="tsd-kind-icon">transpile</a></li>
+								<li class="tsd-kind-method tsd-parent-kind-class tsd-is-inherited"><a href="python.html#getcodeprefix" class="tsd-kind-icon">get<wbr>Code<wbr>Prefix</a></li>
+								<li class="tsd-kind-method tsd-parent-kind-class tsd-is-inherited"><a href="python.html#getsafetitle" class="tsd-kind-icon">get<wbr>Safe<wbr>Title</a></li>
+								<li class="tsd-kind-method tsd-parent-kind-class tsd-is-inherited"><a href="python.html#transpile" class="tsd-kind-icon">transpile</a></li>
 							</ul>
 						</section>
 					</div>
@@ -104,7 +104,7 @@
 					<a name="constructor" class="tsd-anchor"></a>
 					<h3>constructor</h3>
 					<ul class="tsd-signatures tsd-kind-constructor tsd-parent-kind-class tsd-is-inherited">
-						<li class="tsd-signature tsd-kind-icon">new <wbr>Typescript<span class="tsd-signature-symbol">(</span>schema<span class="tsd-signature-symbol">: </span><a href="../interfaces/schema.html" class="tsd-signature-type">Schema</a><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><a href="typescript.html" class="tsd-signature-type">Typescript</a></li>
+						<li class="tsd-signature tsd-kind-icon">new <wbr>Python<span class="tsd-signature-symbol">(</span>schema<span class="tsd-signature-symbol">: </span><a href="../interfaces/schema.html" class="tsd-signature-type">Schema</a><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><a href="python.html" class="tsd-signature-type">Python</a></li>
 					</ul>
 					<ul class="tsd-descriptions">
 						<li class="tsd-description">
@@ -120,7 +120,7 @@
 									<h5>schema: <a href="../interfaces/schema.html" class="tsd-signature-type">Schema</a></h5>
 								</li>
 							</ul>
-							<h4 class="tsd-returns-title">Returns <a href="typescript.html" class="tsd-signature-type">Typescript</a></h4>
+							<h4 class="tsd-returns-title">Returns <a href="python.html" class="tsd-signature-type">Python</a></h4>
 						</li>
 					</ul>
 				</section>
@@ -213,19 +213,19 @@
 				</ul>
 				<ul class="current">
 					<li class="current tsd-kind-class">
-						<a href="typescript.html" class="tsd-kind-icon">Typescript</a>
+						<a href="python.html" class="tsd-kind-icon">Python</a>
 						<ul>
 							<li class=" tsd-kind-constructor tsd-parent-kind-class tsd-is-inherited">
-								<a href="typescript.html#constructor" class="tsd-kind-icon">constructor</a>
+								<a href="python.html#constructor" class="tsd-kind-icon">constructor</a>
 							</li>
 							<li class=" tsd-kind-method tsd-parent-kind-class tsd-is-inherited">
-								<a href="typescript.html#getcodeprefix" class="tsd-kind-icon">get<wbr>Code<wbr>Prefix</a>
+								<a href="python.html#getcodeprefix" class="tsd-kind-icon">get<wbr>Code<wbr>Prefix</a>
 							</li>
 							<li class=" tsd-kind-method tsd-parent-kind-class tsd-is-inherited">
-								<a href="typescript.html#getsafetitle" class="tsd-kind-icon">get<wbr>Safe<wbr>Title</a>
+								<a href="python.html#getsafetitle" class="tsd-kind-icon">get<wbr>Safe<wbr>Title</a>
 							</li>
 							<li class=" tsd-kind-method tsd-parent-kind-class tsd-is-inherited">
-								<a href="typescript.html#transpile" class="tsd-kind-icon">transpile</a>
+								<a href="python.html#transpile" class="tsd-kind-icon">transpile</a>
 							</li>
 						</ul>
 					</li>
