--- a/interfaces/skiperydippery.html
+++ b/interfaces/skiperydippery.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>ObjectOfBooleanVyG3AETh5PX0GXMY | @open-rpc/schema-utils-js</title>
+	<title>Skiperydippery | @open-rpc/schema-utils-js</title>
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="../assets/css/main.css">
@@ -54,10 +54,10 @@
 					<a href="../globals.html">Globals</a>
 				</li>
 				<li>
-					<a href="objectofbooleanvyg3aeth5px0gxmy.html">ObjectOfBooleanVyG3AETh5PX0GXMY</a>
+					<a href="skiperydippery.html">Skiperydippery</a>
 				</li>
 			</ul>
-			<h1>Interface ObjectOfBooleanVyG3AETh5PX0GXMY</h1>
+			<h1>Interface Skiperydippery</h1>
 		</div>
 	</div>
 </header>
@@ -68,13 +68,9 @@
 				<h3>Hierarchy</h3>
 				<ul class="tsd-hierarchy">
 					<li>
-						<span class="target">ObjectOfBooleanVyG3AETh5PX0GXMY</span>
+						<span class="target">Skiperydippery</span>
 					</li>
 				</ul>
-			</section>
-			<section class="tsd-panel tsd-kind-interface">
-				<h3 class="tsd-before-signature">Indexable</h3>
-				<div class="tsd-signature tsd-kind-icon"><span class="tsd-signature-symbol">[</span>k: <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">]: </span><span class="tsd-signature-type">any</span></div>
 			</section>
 			<section class="tsd-panel-group tsd-index-group">
 				<h2>Index</h2>
@@ -83,7 +79,8 @@
 						<section class="tsd-index-section ">
 							<h3>Properties</h3>
 							<ul class="tsd-index-list">
-								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="objectofbooleanvyg3aeth5px0gxmy.html#ripslip" class="tsd-kind-icon">ripslip</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="skiperydippery.html#fooberdoober" class="tsd-kind-icon">fooberdoober</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="skiperydippery.html#gibbledybits" class="tsd-kind-icon">gibbledybits</a></li>
 							</ul>
 						</section>
 					</div>
@@ -92,12 +89,22 @@
 			<section class="tsd-panel-group tsd-member-group ">
 				<h2>Properties</h2>
 				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface">
-					<a name="ripslip" class="tsd-anchor"></a>
-					<h3><span class="tsd-flag ts-flagOptional">Optional</span> ripslip</h3>
-					<div class="tsd-signature tsd-kind-icon">ripslip<span class="tsd-signature-symbol">:</span> <a href="../globals.html#booleanvyg3aeth" class="tsd-signature-type">BooleanVyG3AETh</a></div>
+					<a name="fooberdoober" class="tsd-anchor"></a>
+					<h3><span class="tsd-flag ts-flagOptional">Optional</span> fooberdoober</h3>
+					<div class="tsd-signature tsd-kind-icon">fooberdoober<span class="tsd-signature-symbol">:</span> <a href="../globals.html#bop" class="tsd-signature-type">Bop</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/d8fc0f1/src/integration-tests/results/ts/duplicate-names.ts#L4">src/integration-tests/results/ts/duplicate-names.ts:4</a></li>
+							<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/3cf1d66/src/integration-tests/results/ts/complex.ts#L33">src/integration-tests/results/ts/complex.ts:33</a></li>
+						</ul>
+					</aside>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface">
+					<a name="gibbledybits" class="tsd-anchor"></a>
+					<h3><span class="tsd-flag ts-flagOptional">Optional</span> gibbledybits</h3>
+					<div class="tsd-signature tsd-kind-icon">gibbledybits<span class="tsd-signature-symbol">:</span> <a href="../globals.html#bopskippity" class="tsd-signature-type">Bopskippity</a></div>
+					<aside class="tsd-sources">
+						<ul>
+							<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/3cf1d66/src/integration-tests/results/ts/complex.ts#L34">src/integration-tests/results/ts/complex.ts:34</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -116,10 +123,13 @@
 				</ul>
 				<ul class="current">
 					<li class="current tsd-kind-interface">
-						<a href="objectofbooleanvyg3aeth5px0gxmy.html" class="tsd-kind-icon">Object<wbr>OfBoolean<wbr>VyG3AETh5PX0GXMY</a>
+						<a href="skiperydippery.html" class="tsd-kind-icon">Skiperydippery</a>
 						<ul>
 							<li class=" tsd-kind-property tsd-parent-kind-interface">
-								<a href="objectofbooleanvyg3aeth5px0gxmy.html#ripslip" class="tsd-kind-icon">ripslip</a>
+								<a href="skiperydippery.html#fooberdoober" class="tsd-kind-icon">fooberdoober</a>
+							</li>
+							<li class=" tsd-kind-property tsd-parent-kind-interface">
+								<a href="skiperydippery.html#gibbledybits" class="tsd-kind-icon">gibbledybits</a>
 							</li>
 						</ul>
 					</li>
