--- a/classes/jsonschematotypes.html
+++ b/classes/jsonschematotypes.html
@@ -109,6 +109,11 @@
 							<ul class="tsd-index-list">
 								<li class="tsd-kind-method tsd-parent-kind-class"><a href="jsonschematotypes.html#to" class="tsd-kind-icon">to</a></li>
 							</ul>
+							<h3>Python Methods</h3>
+							<ul class="tsd-index-list">
+								<li class="tsd-kind-method tsd-parent-kind-class"><a href="jsonschematotypes.html#topy" class="tsd-kind-icon">to<wbr>Py</a></li>
+								<li class="tsd-kind-method tsd-parent-kind-class"><a href="jsonschematotypes.html#topython" class="tsd-kind-icon">to<wbr>Python</a></li>
+							</ul>
 							<h3>Rust Methods</h3>
 							<ul class="tsd-index-list">
 								<li class="tsd-kind-method tsd-parent-kind-class"><a href="jsonschematotypes.html#togo" class="tsd-kind-icon">to<wbr>Go</a></li>
@@ -137,7 +142,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/d8fc0f1/src/index.ts#L15">src/index.ts:15</a></li>
+									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/3cf1d66/src/index.ts#L15">src/index.ts:15</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -159,7 +164,7 @@
 					<div class="tsd-signature tsd-kind-icon">mega<wbr>Schema<span class="tsd-signature-symbol">:</span> <a href="../interfaces/schema.html" class="tsd-signature-type">Schema</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/d8fc0f1/src/index.ts#L15">src/index.ts:15</a></li>
+							<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/3cf1d66/src/index.ts#L15">src/index.ts:15</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -176,7 +181,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/d8fc0f1/src/index.ts#L27">src/index.ts:27</a></li>
+									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/3cf1d66/src/index.ts#L32">src/index.ts:32</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -196,6 +201,65 @@
 				</section>
 			</section>
 			<section class="tsd-panel-group tsd-member-group ">
+				<h2>Python Methods</h2>
+				<section class="tsd-panel tsd-member tsd-kind-method tsd-parent-kind-class">
+					<a name="topy" class="tsd-anchor"></a>
+					<h3>to<wbr>Py</h3>
+					<ul class="tsd-signatures tsd-kind-method tsd-parent-kind-class">
+						<li class="tsd-signature tsd-kind-icon">to<wbr>Py<span class="tsd-signature-symbol">(</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span></li>
+					</ul>
+					<ul class="tsd-descriptions">
+						<li class="tsd-description">
+							<aside class="tsd-sources">
+								<ul>
+									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/3cf1d66/src/index.ts#L134">src/index.ts:134</a></li>
+								</ul>
+							</aside>
+							<div class="tsd-comment tsd-typography">
+								<div class="lead">
+									<p>Returns the types in Python</p>
+								</div>
+								<dl class="tsd-comment-tags">
+									<dt>category</dt>
+									<dd><p>TargetCodeGenerator</p>
+									</dd>
+								</dl>
+							</div>
+							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">string</span></h4>
+							<p>The types present in the megaSchema, seperated by newlines.</p>
+						</li>
+					</ul>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-method tsd-parent-kind-class">
+					<a name="topython" class="tsd-anchor"></a>
+					<h3>to<wbr>Python</h3>
+					<ul class="tsd-signatures tsd-kind-method tsd-parent-kind-class">
+						<li class="tsd-signature tsd-kind-icon">to<wbr>Python<span class="tsd-signature-symbol">(</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span></li>
+					</ul>
+					<ul class="tsd-descriptions">
+						<li class="tsd-description">
+							<aside class="tsd-sources">
+								<ul>
+									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/3cf1d66/src/index.ts#L121">src/index.ts:121</a></li>
+								</ul>
+							</aside>
+							<div class="tsd-comment tsd-typography">
+								<div class="lead">
+									<p>Returns the types in Python</p>
+								</div>
+								<dl class="tsd-comment-tags">
+									<dt>category</dt>
+									<dd><p>TargetCodeGenerator</p>
+									</dd>
+								</dl>
+							</div>
+							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">string</span></h4>
+							<p>The types present in the megaSchema, seperated by newlines.</p>
+						</li>
+					</ul>
+				</section>
+			</section>
+			<section class="tsd-panel-group tsd-member-group ">
 				<h2>Rust Methods</h2>
 				<section class="tsd-panel tsd-member tsd-kind-method tsd-parent-kind-class">
 					<a name="togo" class="tsd-anchor"></a>
@@ -207,7 +271,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/d8fc0f1/src/index.ts#L103">src/index.ts:103</a></li>
+									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/3cf1d66/src/index.ts#L108">src/index.ts:108</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -235,7 +299,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/d8fc0f1/src/index.ts#L90">src/index.ts:90</a></li>
+									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/3cf1d66/src/index.ts#L95">src/index.ts:95</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -263,7 +327,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/d8fc0f1/src/index.ts#L77">src/index.ts:77</a></li>
+									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/3cf1d66/src/index.ts#L82">src/index.ts:82</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -291,7 +355,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/d8fc0f1/src/index.ts#L64">src/index.ts:64</a></li>
+									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/3cf1d66/src/index.ts#L69">src/index.ts:69</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -322,7 +386,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/d8fc0f1/src/index.ts#L51">src/index.ts:51</a></li>
+									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/3cf1d66/src/index.ts#L56">src/index.ts:56</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -349,7 +413,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/d8fc0f1/src/index.ts#L40">src/index.ts:40</a></li>
+									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/3cf1d66/src/index.ts#L45">src/index.ts:45</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -398,6 +462,12 @@
 							</li>
 							<li class=" tsd-kind-method tsd-parent-kind-class">
 								<a href="jsonschematotypes.html#togolang" class="tsd-kind-icon">to<wbr>Golang</a>
+							</li>
+							<li class=" tsd-kind-method tsd-parent-kind-class">
+								<a href="jsonschematotypes.html#topy" class="tsd-kind-icon">to<wbr>Py</a>
+							</li>
+							<li class=" tsd-kind-method tsd-parent-kind-class">
+								<a href="jsonschematotypes.html#topython" class="tsd-kind-icon">to<wbr>Python</a>
 							</li>
 							<li class=" tsd-kind-method tsd-parent-kind-class">
 								<a href="jsonschematotypes.html#tors" class="tsd-kind-icon">to<wbr>Rs</a>
