--- a/interfaces/floopdidoop.html
+++ b/interfaces/floopdidoop.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Typescript | @open-rpc/schema-utils-js</title>
+	<title>Floopdidoop | @open-rpc/schema-utils-js</title>
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="../assets/css/main.css">
@@ -54,10 +54,10 @@
 					<a href="../globals.html">Globals</a>
 				</li>
 				<li>
-					<a href="typescript.html">Typescript</a>
+					<a href="floopdidoop.html">Floopdidoop</a>
 				</li>
 			</ul>
-			<h1>Class Typescript</h1>
+			<h1>Interface Floopdidoop</h1>
 		</div>
 	</div>
 </header>
@@ -68,12 +68,7 @@
 				<h3>Hierarchy</h3>
 				<ul class="tsd-hierarchy">
 					<li>
-						<a href="codegen.html" class="tsd-signature-type">CodeGen</a>
-						<ul class="tsd-hierarchy">
-							<li>
-								<span class="target">Typescript</span>
-							</li>
-						</ul>
+						<span class="target">Floopdidoop</span>
 					</li>
 				</ul>
 			</section>
@@ -81,122 +76,37 @@
 				<h2>Index</h2>
 				<section class="tsd-panel tsd-index-panel">
 					<div class="tsd-index-content">
-						<section class="tsd-index-section tsd-is-inherited">
-							<h3>Constructors</h3>
+						<section class="tsd-index-section ">
+							<h3>Properties</h3>
 							<ul class="tsd-index-list">
-								<li class="tsd-kind-constructor tsd-parent-kind-class tsd-is-inherited"><a href="typescript.html#constructor" class="tsd-kind-icon">constructor</a></li>
-							</ul>
-						</section>
-						<section class="tsd-index-section tsd-is-inherited">
-							<h3>Methods</h3>
-							<ul class="tsd-index-list">
-								<li class="tsd-kind-method tsd-parent-kind-class tsd-is-inherited"><a href="typescript.html#getcodeprefix" class="tsd-kind-icon">get<wbr>Code<wbr>Prefix</a></li>
-								<li class="tsd-kind-method tsd-parent-kind-class tsd-is-inherited"><a href="typescript.html#getsafetitle" class="tsd-kind-icon">get<wbr>Safe<wbr>Title</a></li>
-								<li class="tsd-kind-method tsd-parent-kind-class tsd-is-inherited"><a href="typescript.html#transpile" class="tsd-kind-icon">transpile</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="floopdidoop.html#fooberdoober" class="tsd-kind-icon">fooberdoober</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="floopdidoop.html#gibbledybits" class="tsd-kind-icon">gibbledybits</a></li>
 							</ul>
 						</section>
 					</div>
 				</section>
 			</section>
-			<section class="tsd-panel-group tsd-member-group tsd-is-inherited">
-				<h2>Constructors</h2>
-				<section class="tsd-panel tsd-member tsd-kind-constructor tsd-parent-kind-class tsd-is-inherited">
-					<a name="constructor" class="tsd-anchor"></a>
-					<h3>constructor</h3>
-					<ul class="tsd-signatures tsd-kind-constructor tsd-parent-kind-class tsd-is-inherited">
-						<li class="tsd-signature tsd-kind-icon">new <wbr>Typescript<span class="tsd-signature-symbol">(</span>schema<span class="tsd-signature-symbol">: </span><a href="../interfaces/schema.html" class="tsd-signature-type">Schema</a><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><a href="typescript.html" class="tsd-signature-type">Typescript</a></li>
-					</ul>
-					<ul class="tsd-descriptions">
-						<li class="tsd-description">
-							<aside class="tsd-sources">
-								<p>Inherited from <a href="codegen.html">CodeGen</a>.<a href="codegen.html#constructor">constructor</a></p>
-								<ul>
-									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/3cf1d66/src/codegens/codegen.ts#L14">src/codegens/codegen.ts:14</a></li>
-								</ul>
-							</aside>
-							<h4 class="tsd-parameters-title">Parameters</h4>
-							<ul class="tsd-parameters">
-								<li>
-									<h5>schema: <a href="../interfaces/schema.html" class="tsd-signature-type">Schema</a></h5>
-								</li>
-							</ul>
-							<h4 class="tsd-returns-title">Returns <a href="typescript.html" class="tsd-signature-type">Typescript</a></h4>
-						</li>
-					</ul>
+			<section class="tsd-panel-group tsd-member-group ">
+				<h2>Properties</h2>
+				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface">
+					<a name="fooberdoober" class="tsd-anchor"></a>
+					<h3>fooberdoober</h3>
+					<div class="tsd-signature tsd-kind-icon">fooberdoober<span class="tsd-signature-symbol">:</span> <a href="../globals.html#bop" class="tsd-signature-type">Bop</a></div>
+					<aside class="tsd-sources">
+						<ul>
+							<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/3cf1d66/src/integration-tests/results/ts/complex.ts#L29">src/integration-tests/results/ts/complex.ts:29</a></li>
+						</ul>
+					</aside>
 				</section>
-			</section>
-			<section class="tsd-panel-group tsd-member-group tsd-is-inherited">
-				<h2>Methods</h2>
-				<section class="tsd-panel tsd-member tsd-kind-method tsd-parent-kind-class tsd-is-inherited">
-					<a name="getcodeprefix" class="tsd-anchor"></a>
-					<h3>get<wbr>Code<wbr>Prefix</h3>
-					<ul class="tsd-signatures tsd-kind-method tsd-parent-kind-class tsd-is-inherited">
-						<li class="tsd-signature tsd-kind-icon">get<wbr>Code<wbr>Prefix<span class="tsd-signature-symbol">(</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span></li>
-					</ul>
-					<ul class="tsd-descriptions">
-						<li class="tsd-description">
-							<aside class="tsd-sources">
-								<p>Inherited from <a href="codegen.html">CodeGen</a>.<a href="codegen.html#getcodeprefix">getCodePrefix</a></p>
-								<ul>
-									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/3cf1d66/src/codegens/codegen.ts#L44">src/codegens/codegen.ts:44</a></li>
-								</ul>
-							</aside>
-							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">string</span></h4>
-						</li>
-					</ul>
-				</section>
-				<section class="tsd-panel tsd-member tsd-kind-method tsd-parent-kind-class tsd-is-inherited">
-					<a name="getsafetitle" class="tsd-anchor"></a>
-					<h3>get<wbr>Safe<wbr>Title</h3>
-					<ul class="tsd-signatures tsd-kind-method tsd-parent-kind-class tsd-is-inherited">
-						<li class="tsd-signature tsd-kind-icon">get<wbr>Safe<wbr>Title<span class="tsd-signature-symbol">(</span>title<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span></li>
-					</ul>
-					<ul class="tsd-descriptions">
-						<li class="tsd-description">
-							<aside class="tsd-sources">
-								<p>Inherited from <a href="codegen.html">CodeGen</a>.<a href="codegen.html#getsafetitle">getSafeTitle</a></p>
-								<ul>
-									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/3cf1d66/src/codegens/codegen.ts#L40">src/codegens/codegen.ts:40</a></li>
-								</ul>
-							</aside>
-							<div class="tsd-comment tsd-typography">
-								<div class="lead">
-									<p>Generic title transform that gives a title without special characters or spaces. It may be overriden if
-									this implementation does not suffice.</p>
-								</div>
-							</div>
-							<h4 class="tsd-parameters-title">Parameters</h4>
-							<ul class="tsd-parameters">
-								<li>
-									<h5>title: <span class="tsd-signature-type">string</span></h5>
-								</li>
-							</ul>
-							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">string</span></h4>
-						</li>
-					</ul>
-				</section>
-				<section class="tsd-panel tsd-member tsd-kind-method tsd-parent-kind-class tsd-is-inherited">
-					<a name="transpile" class="tsd-anchor"></a>
-					<h3>transpile</h3>
-					<ul class="tsd-signatures tsd-kind-method tsd-parent-kind-class tsd-is-inherited">
-						<li class="tsd-signature tsd-kind-icon">transpile<span class="tsd-signature-symbol">(</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span></li>
-					</ul>
-					<ul class="tsd-descriptions">
-						<li class="tsd-description">
-							<aside class="tsd-sources">
-								<p>Inherited from <a href="codegen.html">CodeGen</a>.<a href="codegen.html#transpile">transpile</a></p>
-								<ul>
-									<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/3cf1d66/src/codegens/codegen.ts#L20">src/codegens/codegen.ts:20</a></li>
-								</ul>
-							</aside>
-							<div class="tsd-comment tsd-typography">
-								<div class="lead">
-									<p>Given a schema, it will generate code for both the schema and the schemas in its definitions section</p>
-								</div>
-							</div>
-							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">string</span></h4>
-						</li>
-					</ul>
+				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface">
+					<a name="gibbledybits" class="tsd-anchor"></a>
+					<h3><span class="tsd-flag ts-flagOptional">Optional</span> gibbledybits</h3>
+					<div class="tsd-signature tsd-kind-icon">gibbledybits<span class="tsd-signature-symbol">:</span> <a href="../globals.html#bopskippity" class="tsd-signature-type">Bopskippity</a></div>
+					<aside class="tsd-sources">
+						<ul>
+							<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/3cf1d66/src/integration-tests/results/ts/complex.ts#L30">src/integration-tests/results/ts/complex.ts:30</a></li>
+						</ul>
+					</aside>
 				</section>
 			</section>
 		</div>
@@ -212,20 +122,14 @@
 				<ul class="before-current">
 				</ul>
 				<ul class="current">
-					<li class="current tsd-kind-class">
-						<a href="typescript.html" class="tsd-kind-icon">Typescript</a>
+					<li class="current tsd-kind-interface">
+						<a href="floopdidoop.html" class="tsd-kind-icon">Floopdidoop</a>
 						<ul>
-							<li class=" tsd-kind-constructor tsd-parent-kind-class tsd-is-inherited">
-								<a href="typescript.html#constructor" class="tsd-kind-icon">constructor</a>
+							<li class=" tsd-kind-property tsd-parent-kind-interface">
+								<a href="floopdidoop.html#fooberdoober" class="tsd-kind-icon">fooberdoober</a>
 							</li>
-							<li class=" tsd-kind-method tsd-parent-kind-class tsd-is-inherited">
-								<a href="typescript.html#getcodeprefix" class="tsd-kind-icon">get<wbr>Code<wbr>Prefix</a>
-							</li>
-							<li class=" tsd-kind-method tsd-parent-kind-class tsd-is-inherited">
-								<a href="typescript.html#getsafetitle" class="tsd-kind-icon">get<wbr>Safe<wbr>Title</a>
-							</li>
-							<li class=" tsd-kind-method tsd-parent-kind-class tsd-is-inherited">
-								<a href="typescript.html#transpile" class="tsd-kind-icon">transpile</a>
+							<li class=" tsd-kind-property tsd-parent-kind-interface">
+								<a href="floopdidoop.html#gibbledybits" class="tsd-kind-icon">gibbledybits</a>
 							</li>
 						</ul>
 					</li>
